Completed integration of Flickrs API

--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,5 @@ android.useAndroidX=true
 android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+FLICKR_API_KEY="fc54888a21a498f431408d1029d8bc0b"
+FLICKR_API_SECRET="45c1a1384b2308ac"
