--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,5 @@ dependencies {
     //implementation files('libs/slf4j-android-1.7.28.jar')
     implementation files('flickrj-android-2.1.0.jar')
     implementation 'org.slf4j:slf4j-api:1.7.28'
+    implementation 'com.github.bumptech.glide:glide:4.2.0'
 }
